--- a/apps/website/css/main.css
+++ b/apps/website/css/main.css
@@ -66,10 +66,18 @@ h1#date {
 .form-group {
   margin: 30px 0;
 }
+.form-group label {
+  margin-bottom: 8px;
+  display: block;
+}
 .form-group.row {
   display: flex;
   align-items: center;
 }
+.form-group.row label {
+  margin-bottom: 0px;
+}
+
 input,
 select {
   background-color: var(--color-black);
@@ -104,10 +112,12 @@ button {
 }
 
 [data-visible="true"] {
-  display: block;
+  visibility: visible;
+  height: auto;
 }
 [data-visible="false"] {
-  display: none;
+  visibility: hidden;
+  height: 0px;
 }
 
 footer {
