--- a/apps/website/css/main.css
+++ b/apps/website/css/main.css
@@ -1,8 +1,13 @@
 :root {
   --color-black: #1f1f1f;
-  --color-white: #d9d9d9;
+  --color-white: #ffffff;
+  --color-deep-brown: #664d4d;
+  --color-light-brown: #cca9a4;
 
   --font-primary: Helvetica, sans-serif;
+  --font-secondary: Coolvetica, sans-serif;
+
+  --footer-height: 80px;
 }
 
 @font-face {
@@ -15,6 +20,11 @@
   src: url(../assets/fonts/HelveticaNeue-Roman.otf);
   font-weight: 400;
 }
+@font-face {
+  font-family: Coolvetica;
+  src: url(../assets/fonts/coolvetica-rg.otf);
+  font-weight: 400;
+}
 
 * {
   box-sizing: border-box;
@@ -22,52 +32,141 @@
 
 body {
   background-color: var(--color-black);
-  color: var(--color-white);
+  color: var(--color-black);
   font-size: 20px;
   line-height: 30px;
   font-family: var(--font-primary);
+  display: grid;
 }
 
-#main-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-h1#date {
-  font-size: 86px;
-  font-weight: 200;
-  text-transform: uppercase;
-  margin-left: 30px;
-  font-weight: 100;
+a {
+  color: inherit;
 }
 
-#banner {
-  background-color: var(--color-white);
-  color: var(--color-black);
-  padding: 32px 0;
-  height: auto;
-  margin-top: 44px;
-  margin-bottom: 32px;
-  overflow-x: hidden;
-}
-#banner > h2 {
-  font-size: 86px;
-  line-height: -4px;
-  margin: 0px;
-  margin: 0 24px;
-  text-align: center;
-  font-weight: 100;
+a:hover {
+  text-decoration: none;
 }
 
 .container {
-  max-width: 700px;
+  max-width: 760px;
   margin: auto;
+  border-radius: 8px;
+  background-color: var(--color-white);
+  display: flex;
+  position: relative;
+  width: 100%;
 }
+
+main.container {
+  margin-top: 120px;
+}
+#food-pot {
+  font-size: 180px;
+  position: absolute;
+  right: 100px;
+  top: -20px;
+}
+.container > section {
+  flex-grow: 1;
+  padding: 32px;
+  padding-bottom: 84px;
+  position: relative;
+  overflow: hidden;
+}
+
+iframe {
+  border: none;
+  outline: none;
+}
+
+dotlottie-player#confetti {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  pointer-events: none;
+  opacity: 0;
+  transition: all ease-in-out 0.75s;
+}
+
+#banner {
+  background-color: var(--color-deep-brown);
+  color: var(--color-white);
+  transform: rotate(-45deg);
+  width: 1000px;
+  position: absolute;
+  right: -300px;
+  bottom: 200px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 2px;
+  line-height: 0;
+  padding: 8px 0;
+  font-weight: 100;
+  display: none;
+}
+
+.container > aside {
+  width: 214px;
+  background-color: var(--color-deep-brown);
+  padding: 0 28px;
+  border-radius: 0px 8px 8px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container > aside > h2 {
+  font-size: 82px;
+  color: var(--color-light-brown);
+  transform: rotate(-90deg);
+  line-height: 1;
+  font-family: var(--font-secondary);
+  font-weight: 400;
+}
+
+.main-header {
+  margin-bottom: 50px;
+}
+.main-header > h1 {
+  font-size: 64px;
+  color: var(--color-deep-brown);
+  line-height: 0;
+  font-family: var(--font-secondary);
+  font-weight: 400;
+}
+.main-header > p {
+  font-size: 20px;
+  color: var(--color-deep-brown);
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  line-height: 0;
+}
+
 .form-group {
-  margin: 30px 0;
+  margin-bottom: 24px;
+}
+
+.form-group__message {
+  font-size: 12px;
+  margin-top: 0px;
+}
+#hourglass {
+  display: inline-block;
+  transform: rotate(0deg);
+  animation: spin 2s ease-in-out infinite forwards;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 .form-group label {
-  margin-bottom: 8px;
+  margin-bottom: 4px;
+  font-size: 16px;
   display: block;
 }
 .form-group.row {
@@ -80,15 +179,19 @@ h1#date {
 
 input,
 select {
-  background-color: var(--color-black);
   height: 44px;
   outline: none;
-  color: var(--color-white);
-  border-radius: 0;
+  color: var(--color-black);
+  border-radius: 4px;
   padding: 0 1em;
   width: 100%;
-  border: 1px solid var(--color-white);
+  border: 1px solid var(--color-black);
 }
+
+input:disabled {
+  cursor: not-allowed;
+}
+
 input[type="checkbox"] {
   width: auto;
 }
@@ -100,15 +203,22 @@ label.checkbox {
 }
 
 button {
-  border-radius: 0px;
+  border-radius: 8px;
   outline: none;
   border: none;
-  background-color: var(--color-white);
-  color: var(--color-black);
-  padding: 1.75em 8em;
-  font-size: 18px;
+  background-color: var(--color-deep-brown);
+  color: var(--color-white);
+  padding: 2em 0;
+  font-size: 16px;
   line-height: 0px;
   cursor: pointer;
+  width: 100%;
+  font-family: var(--font-primary);
+  font-weight: 400;
+}
+button:disabled {
+  opacity: 0.75;
+  cursor: not-allowed;
 }
 
 [data-visible="true"] {
@@ -121,6 +231,8 @@ button {
 }
 
 footer {
-  padding: 24px 0;
   font-size: 16px;
+  text-align: center;
+  color: var(--color-white);
+  padding: 50px 0;
 }
