--- a/apps/website/css/main.css
+++ b/apps/website/css/main.css
@@ -61,10 +61,11 @@ main.container {
   margin-top: 120px;
 }
 #food-pot {
-  font-size: 180px;
+  width: 180px;
+  aspect-ratio: 1/1;
   position: absolute;
-  right: 100px;
-  top: -20px;
+  right: 120px;
+  top: -80px;
 }
 .container > section {
   flex-grow: 1;
@@ -105,7 +106,7 @@ dotlottie-player#confetti {
   line-height: 0;
   padding: 8px 0;
   font-weight: 100;
-  display: block;
+  display: none;
 }
 
 .container > aside {
@@ -284,8 +285,9 @@ footer {
     font-size: 14px;
   }
   #food-pot {
-    font-size: 100px;
-    right: 40px;
+    width: 100px;
+    right: 20px;
+    top: -40px;
   }
 
   footer {
