website-feat: adjust banner on mobile

--- a/apps/website/css/main.css
+++ b/apps/website/css/main.css
@@ -298,4 +298,8 @@ footer {
   #bank-info-form button {
     margin-top: 24px;
   }
+  #banner {
+    font-size: 16px;
+    padding: 4px 0px;
+  }
 }
