--- a/apps/website/css/main.css
+++ b/apps/website/css/main.css
@@ -267,6 +267,26 @@ footer {
   padding: 24px 0;
 }
 
+.preloader {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-black);
+  color: var(--color-white);
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+.preloader--hide {
+  opacity: 0;
+  pointer-events: none;
+}
 @media screen and (max-width: 700px) {
   .container {
     flex-direction: column-reverse;
