--- a/apps/website-nuxt/assets/css/main.css
+++ b/apps/website-nuxt/assets/css/main.css
@@ -12,17 +12,17 @@
 
 @font-face {
 	font-family: Helvetica;
-	src: url(/assets/fonts/HelveticaNeue-Thin.otf);
+	src: url(~/assets/fonts/HelveticaNeue-Thin.otf);
 	font-weight: 100;
 }
 @font-face {
 	font-family: Helvetica;
-	src: url(/assets/fonts/HelveticaNeue-Roman.otf);
+	src: url(~/assets/fonts/HelveticaNeue-Roman.otf);
 	font-weight: 400;
 }
 @font-face {
 	font-family: Coolvetica;
-	src: url(/assets/fonts/coolvetica-rg.otf);
+	src: url(~/assets/fonts/coolvetica-rg.otf);
 	font-weight: 400;
 }
 
@@ -80,14 +80,14 @@ iframe {
 	outline: none;
 }
 
-dotlottie-player#confetti {
+#confetti {
 	position: absolute;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	top: 0;
 	pointer-events: none;
-	opacity: 0;
+	opacity: 1;
 	transition: all ease-in-out 0.75s;
 }
 
@@ -106,7 +106,7 @@ dotlottie-player#confetti {
 	line-height: 0;
 	padding: 8px 0;
 	font-weight: 100;
-	display: none;
+	display: block;
 }
 
 .container > aside {
@@ -283,7 +283,7 @@ footer {
 	transition: transform 1s ease-in-out;
 	transform: scaleX(1);
 	transform-origin: top center;
-	z-index: 9999;
+	z-index: 99;
 }
 
 .preloader--hide {
